Agregado endpoint para obtener usuarios por dni
