# public/openapi.yaml
@@ -128,6 +128,14 @@ paths:
       tags: [Auth]
       responses: { "201": { description: OK } }
 
+  # USUARIOS
+  /api/users/{dni}:
+    get:
+      summary: Obtener usuario por DNI
+      tags: [Usuarios]
+      parameters: [{ name: dni, in: path, required: true, schema: { type: string } }]
+      responses: { "200": { description: OK } }
+
   # CONDUCTORES
   /api/conductores:
     get:
